Change font size, fix navbar alignment

--- a/css/navbar.sass
+++ b/css/navbar.sass
@@ -10,6 +10,7 @@
 
 .navbar-table
     display: flex
+    align-items: center
     justify-content: space-between
 
 .navbar-item
