--- a/css/site.sass
+++ b/css/site.sass
@@ -8,8 +8,8 @@ body
     background-color: #fafafa
     color: $text-color
     font-family: Helvetica,sans-serif
-    font-size: 1.4em
-    line-height: 1.6
+    font-size: 1.2em
+    line-height: 1.5
 
 .wrapper
     max-width: 800px
